cabal-version:      2.4
name:               haskBoy
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             johannes
maintainer:         johannesbarja@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hboy
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base      ^>=4.17.1.0
                    , haskBoy
                    , mtl       ^>=2.2.2
                    , hspec     ^>=2.10.10
                    , QuickCheck^>=2.14.2
                    , bytestring^>=0.11.5.3
                    , vector    ^>=0.13.0.0
                    , sdl2      ^>=2.5.5.0
                    , lens      ^>=5.2.2
                    , deepseq   ^>=1.4.8.0
                    , containers^>=0.6.7
    extra-libraries: SDL2 SDL2_mixer
    ghc-options: -Wall -O2 -fspecialize-aggressively -fexpose-all-unfoldings -rtsopts
    hs-source-dirs: app
    default-language: Haskell2010

library
    exposed-modules: HaskBoy
        HaskBoy.Emulator
        HaskBoy.Cpu HaskBoy.Cpu.Execution
        HaskBoy.Cpu.Instructions
        HaskBoy.Mmu
        HaskBoy.Ppu HaskBoy.Ppu.Execution
        HaskBoy.BitOps

    build-depends:    base      ^>=4.17.1.0
                    , mtl       ^>=2.2.2
                    , vector    ^>=0.13.0.0
                    , containers^>=0.6.7
                    , lens      ^>=5.2.2
                    , QuickCheck^>=2.14.2
                    , mod       ^>=0.2.0.1

    ghc-options: -Wall
    hs-source-dirs: src
    default-language: Haskell2010

test-suite hboy-test
    Main-is:          Main.hs
    type:             exitcode-stdio-1.0

    build-depends:    base      ^>=4.17.1.0
                    , haskBoy
                    , mtl       ^>=2.2.2
                    , hspec     ^>=2.10.10
                    , QuickCheck^>=2.14.2
                    , vector    ^>=0.13.0.0
                    , lens      ^>=5.2.2
                    , containers^>=0.6.7

    hs-source-dirs: test
    default-language: Haskell2010
